[package]
name = "zeros"
version = "0.1.0"
edition = "2021"
authors = ["gngpp <verticle@foxmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dns = {path = "lib/dns" }
zerotier = {path = "lib/zerotier" }

[workspace]
members = [
    "lib/dns",
    "lib/zerotier"
]