[package]
name = "zeros"
version = "0.1.0"
edition = "2021"
authors = ["gngpp <verticle@foxmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dns = {path = "lib/dns" }
zerotier = {path = "lib/zerotier" }
clap = { version = "3.1.18", features = ["cargo"] }
# clap = { version = "3.1.18", features = ["device"] }

log = "0.4.0"
env_logger = "0.8.4"

[[example]]
name = "demo"

[workspace]
members = [
    "lib/dns",
    "lib/zerotier"
]