[package]
name = "zerotier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
reqwest = "0.9.5"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
log = "0.4.0"
env_logger = "0.8.4"